# ProteinTertiaryStructure_prediction

./: .gitignore  README.md
data/: profilazionex64.csv  profilazionex86.csv
data/x64/: Base_01.txt  Base_02.txt  Base_03.txt  Base_04.txt  Base_05.txt  V5_01.txt  V5_02.txt  V5_03.txt  V5_04.txt  V5_05.txt  _.txt  v1_01.txt  v1_02.txt  v1_03.txt  v1_04.txt  v1_05.txt  v2_01.txt  v2_02.txt  v2_03.txt  v2_04.txt  v2_05.txt  v3_01.txt  v3_02.txt  v3_03.txt  v3_04.txt  v3_05.txt  v4_01.txt  v4_02.txt  v4_03.txt  v4_04.txt  v4_05.txt
data/x86/: Base_01.txt  Base_02.txt  Base_03.txt  Base_04.txt  Base_05.txt  V5_05.txt  v5_01.txt  v5_02.txt  v5_03.txt  v5_04.txt
docs/: commands.md
output/: gmon.out  out32_256_3_phi.ds2  out32_256_3_psi.ds2  profile.txt  pst64c
script/: compile32.sh  compile64.sh  compileOpenMP_64.sh  compileProva.sh  debug32.sh  debug64.sh  debugOpenMP_64.sh  profile32.sh  profile64.sh  profileOpenMP_64.sh  run32.sh  run64.sh  runOpenMP_64.sh  verify32.sh  verify64.sh  verifyOpenMP_64.sh
src/: CMakeLists.txt  pst64c.c
src/openMP_x64/: energy64.nasm  pst_OpenMP_64c.c
src/x64/: energy64.nasm  profile.txt  profile_v1.txt  profile_v2.txt  profile_v3.txt  profile_v4.txt  profile_v5.txt  pst64.nasm  pst64c.c  sseutils64.nasm  util_fun64.nasm
src/x86/: energy32.nasm  profile.txt  pst32c.c
test/: prova.nasm  prova_assembly.c  test_output.c  verify_output32.c  verify_output64.c  verify_output_OpenMP_64.c
test/ref_output/: __phi_double.ds2  __psi_double.ds2
